# DiNT

./: .gitignore  CMakeLists.txt  NOTICE.txt  README.md  clean.sh  compile.sh
dd_pot/: alkT.f  c2h4o.f  ch3f-12.f  ch3f.f  ch3oohM.f  ch4h2.f  chn2.f  co2kr0.f  dd-mc.f  dd.f  dia-HE-MM-1.f  eth.f  g.x  gaussian-12.f  gaussian-2.f  gaussian.f  h2o2b.f  h3.f  hcohe.f  khpM.f  molpro-12.f  molpro-2.f  molpro-multi.f  one-HE-MM-1.f  ph3h2.f  propargyl.f  qc.g03-2  qc.molpro  rh2.f  rohM.f  rohMP.f  rohT.f  roohT.f  save-ch3f.f  test.f  ticl4ar.f  tinkerM.f  vplusexp6.f  vplusexp6all.f  vplusexp6dt.f  (+4 more)
dd_pot/examples/: ReadMe  adi-HE-MM-1.f  benzene.f  c2h6he.f  ch2ohhe.f  ch3.f  ch3ohM.f  ch3ohhe.f  ch3ohheA.f  ch4ch4.f  ch4h2o.f  ch4he.f  ch4o2.f  dd-r+m.f  ethylene.f  gaussian-1.f  gaussian-coupled.f  gaussian.f  h2o2.f  h2o2so.f  h2ohe.f  h3oDD.f  hnco.f  m.x  molpro-1.f  molpro-coupled.f  molpro-oc2h4.f  molpro-so.f  molpro.f  oh3.f  propane.f  propargyl.f  qc.g03-1
mpi_pot/: cih2o2m-mpi.f
pot/: 1dso.f  1dso2.f  BUCK.f  CMakeLists.txt  ER2d.f  HalPd.f  LJ.f  LiFHJ.f  LiFHJx.f  MCH_SB.f  MCH_SBx.f  MCH_TL.f  NP-Ad.f  NP-Bd.f  c2h7.f  c2h7aj.f  ch3f-rv.f  ch3f-rv2.f  ch3f-rv3.f  ch3f-rv3aj.f  ch3f-rv3aj2.f  ch3f-rv3aj2st.f  ch3f-rv4.f  ch3f-tmp.f  ch4o.f  ch4o.inp  ch4oALL.f  ch4oh.f  ch4ohALL.f  h2oM.f  h2oMM.f  h3o.f  ho2h2oLS2.f  ho2heLS.f  ho2heLS2.f  ho2m.f  ho2n2LS.f  ho2n2LS3C.f  ho2n2LSB.f  ho2n2LSC.f  (+26 more)
runs/EXAMPLE-CH4+He/: input  job.pbs
sprng/: check.ccmrg  check.clcg  check.clcg64  check.clfg  check.cmlfg  check.fcmrg  check.flcg  check.flcg64  check.flfg  check.fmlfg  check_ptr.ccmrg  check_ptr.clcg  check_ptr.clcg64  check_ptr.clfg  check_ptr.cmlfg  check_ptr.fcmrg  check_ptr.flcg  check_ptr.flcg64  check_ptr.flfg  check_ptr.fmlfg  check_sim.ccmrg  check_sim.clcg  check_sim.clcg64  check_sim.clfg  check_sim.cmlfg  check_sim.fcmrg  check_sim.flcg  check_sim.flcg64  check_sim.flfg  check_sim.fmlfg  timecmrg  timefcmrg  timeflcg  timeflcg64  timeflfg  timefmlfg  timelcg  timelcg64  timelfg  timemlfg
sprng/DOCS/: sprng.html.tar
sprng/EXAMPLES/: checkpoint  checkpoint-simple  checkpointf  checkpointf-simple  invalid_ID  invalid_IDf  pi-simple  pif-simple  seed  seed-simple  seedf  seedf-simple  simple-simple  simplef-simple  spawn  spawnf  sprng  sprng-simple  sprngf  sprngf-simple
sprng/SRC/: make.LINUX  make.SP2
sprng/TESTS/: collisions.cmrg  coupon.cmrg  equidist.cmrg  gap.cmrg  maxt.cmrg  perm.cmrg  poker.cmrg  random_walk.cmrg  runs.cmrg  serial.cmrg  sum.cmrg  wolff.cmrg
src/: CMakeLists.txt  HARDCODED.READ  Makefile  MakefileIMLS  MakefileOLD  MakefileSAVE  Makefile_theta  addrot.F  airy.f  andersen.F  ange.f  angmom.f  atomdiatom.F  bootstrap.f  bsstep.f  c_output.f  c_ran.f  c_sys.f  c_traj.f  carttojac.f  checkfrus.f  checkhop.F  cn.f  decocheck.F  derivs.f  detwell.f  diamin.f  diamin2.f  diapot.f  diapot2.f  diatom.F  dint.F  dlaev2.f  driver.f  dsyev.f  ejscale.f  elecdeco.f  ems.F  endmpi.f  ewkb.f  (+70 more)
test/: .gitignore  Ar_input  CH4H_input  CH4O_input  run_test.sh
test/samp/: dint.brot  input
